--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@clerk/nextjs": "^5.1.6",
     "@hookform/resolvers": "^3.6.0",
     "@prisma/client": "^5.15.1",
+    "@svgr/webpack": "^8.1.0",
+    "clsx": "^2.1.1",
     "libphonenumber-js": "^1.11.4",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.0",
     "react-phone-input-2": "^2.15.1",
     "redis": "^4.6.14",
     "svix": "^1.24.0",
+    "tailwind-merge": "^2.4.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
