--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@svgr/webpack": "^8.1.0",
     "clsx": "^2.1.1",
     "libphonenumber-js": "^1.11.4",
+    "lucide-react": "^0.427.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
@@ -23,7 +24,9 @@
     "react-phone-input-2": "^2.15.1",
     "redis": "^4.6.14",
     "svix": "^1.24.0",
-    "tailwind-merge": "^2.4.0",
+    "swiper": "^11.1.9",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
