--- a/package.json
+++ b/package.json
@@ -3,44 +3,46 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.1.6",
-    "@hookform/resolvers": "^3.6.0",
-    "@prisma/client": "^5.15.1",
-    "@svgr/webpack": "^8.1.0",
+    "@clerk/nextjs": "^6.1.0",
+    "@clerk/types": "^4.29.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@prisma/client": "^5.21.1",
     "clsx": "^2.1.1",
-    "libphonenumber-js": "^1.11.4",
-    "lucide-react": "^0.427.0",
-    "next": "14.2.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.52.0",
+    "libphonenumber-js": "^1.11.12",
+    "lucide-react": "^0.454.0",
+    "next": "15.0.2",
+    "react": "19.0.0-rc-02c0e824-20241028",
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-dropzone": "^14.3.1",
+    "react-hook-form": "^7.53.1",
     "react-phone-input-2": "^2.15.1",
-    "redis": "^4.6.14",
-    "svix": "^1.24.0",
-    "swiper": "^11.1.9",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
+    "redis": "^4.7.0",
+    "svix": "^1.37.0",
+    "swiper": "^11.1.14",
+    "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4",
-    "postcss": "^8",
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "prisma": "^5.16.1",
-    "tailwindcss": "^3.4.1",
+    "@types/node": "^22",
+    "@types/react": "npm:types-react@19.0.0-alpha.3",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3",
+    "eslint": "^9",
+    "eslint-config-next": "15.0.2",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "prisma": "^5.21.1",
+    "tailwindcss": "^3.4.14",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.2"
+    "typescript": "^5.6.3"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@19.0.0-alpha.3",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3"
   }
 }
