--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@clerk/nextjs": "^6.1.0",
     "@clerk/types": "^4.29.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^6.9.0",
     "clsx": "^2.1.1",
