--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "clsx": "^2.1.1",
     "libphonenumber-js": "^1.11.12",
     "lucide-react": "^0.454.0",
-    "next": "15.1.2",
+    "next": "^15.3.5",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-dropzone": "^14.3.1",
